# rag-fortress

./: .dockerignore  .env.docker.example  Action items  LICENSE  Makefile  README.md  docker-compose.yml  test_roles_endpoint.py  test_users_endpoint.py
.github/: labels.yml  (+1 more)
backend/: .dockerignore  .env.docker.example  .env.email.example  .env.example  .gitignore  Dockerfile  Dockerfile.qdrant  QUICKSTART.md  SEEDERS.md  alembic.ini  check_db.py  check_schema.py  check_users.py  debug_tokens.py  docker-compose.yml  drop_tables.py  dump.rdb  example_fallback_usage.py  generate_fernet_key.py  init_qdrant.py  migrate.py  prod_requirements.txt  pyproject.toml  pytest.ini  render_requirements.txt  requirements.txt  run_jobs.py  run_production.py  run_seeders.py  seeders.py  setup.py  startup.py  test_all_db_providers.py  test_encryption_security.py  test_fallback_validation.py  test_imports.py  test_log_sanitization.py  test_password_reset.py  test_results.txt  test_settings.py  (+2 more)
backend/app/: main.py
backend/app/config/: __init__.py  app_settings.py  cache_settings.py  database_settings.py  email_settings.py  embedding_settings.py  llm_settings.py  prompt_settings.py  reranker_settings.py  response_templates.py  settings.py  vectordb_settings.py
backend/app/core/: __init__.py  cache.py  database.py  email_client.py  embedding_factory.py  event_handlers.py  events.py  exceptions.py  llm_factory.py  log_sanitizer.py  logging.py  reranker_factory.py  security.py  seeders.py  semantic_cache.py  settings_cache.py  settings_loader.py  startup.py  sync_db.py  vector_store_factory.py
backend/app/events/: __init__.py  activity_log_event.py  base.py  message_save_event.py  semantic_cache_event.py
backend/app/handlers/: __init__.py  activity_log.py  admin.py  auth.py  conversation.py  dashboard.py  departments.py  email.py  error_report.py  file_upload.py  notification.py  profile.py  settings.py  users.py
backend/app/jobs/: __init__.py  bootstrap.py  handlers.py  integration.py  job_manager.py  registry.py  tracker.py
backend/app/middleware/: __init__.py  cors.py  logging.py
backend/app/models/: __init__.py  activity_log.py  application_setting.py  auth.py  base.py  conversation.py  department.py  error_report.py  file_upload.py  job.py  message.py  notification.py  password_reset_token.py  permission_override.py  user.py  user_invitation.py  user_permission.py  user_profile.py
backend/app/routes/: activity_log.py  admin.py  auth.py  conversation.py  dashboard.py  departments.py  diagnostics.py  email.py  error_reports.py  file_upload.py  jobs.py  notifications.py  override_requests.py  settings.py  users.py
backend/app/schemas/: __init__.py  activity_log.py  common.py  conversation.py  department.py  document.py  email.py  error_report.py  file_upload.py  llm_classifier.py  message_metadata.py  override_request.py  settings.py  user.py
backend/app/seeders/: README.md  __init__.py  activity_logs.py  admin.py  app.py  application_settings.py  application_settings_async.py  base.py  conversation.py  departments.py  jobs.py  knowledge_base.py  roles_permissions.py
backend/app/services/: activity_logger_service.py  admin_service.py  cache_service.py  chunking.py  chunking_backup.py  conversation_service.py  dashboard_service.py  diagnostics.py  document_ingestion.py  document_ingestion_v2.py  document_loader.py  email_service.py  embedding.py  error_report_service.py  file_upload_service.py  ingestion_service.py  job_service.py  llm_router_service.py  notification_service.py  override_request_service.py  permission_service.py  query_validator_service.py  settings_service.py  stats_cache.py
backend/app/utils/: __init__.py  demo_mode.py  encryption.py  intent_classifier.py  llm_error_handler.py  log_sanitizer.py  migrate_message_encryption.py  migrate_settings_encryption.py  query_helpers.py  rate_limiter.py  text_processing.py  user_clearance_cache.py
backend/data/: .gitignore
backend/data/knowledge_base/: README.md
backend/data/vector_store/: README.md
backend/docs/: ADAPTIVE_RETRIEVAL.md  ARCHITECTURE.md  ARCHITECTURE_RETRIEVER_REFACTOR.md  BACKGROUND_SETUP.md  CACHING_GUIDE.md  DATA_ENCRYPTION_GUIDE.md  DEPARTMENT_FILE_ASSOCIATION_SUMMARY.md  DOCKER.md  DOCKER_SECRETS.md  DOCUMENT_MANAGEMENT_GUIDE.md  EMAIL_SYSTEM.md  EMBEDDING_VECTORDB_CONFIG.md  EMBEDDING_VECTORDB_QUICK_REF.md  EVENTS_GUIDE.md  EXCEPTION_HANDLING_GUIDE.md  FALLBACK_LLM_GUIDE.md  FILE_UPLOAD_ARCHITECTURE.md  INSTALLATION.md  INSTALLATION_LEGACY.md  INTENT_CLASSIFIER_GUIDE.md  JOBS_GUIDE.md  JOB_MANAGER.md  JOB_QUEUE.md  LLM_GUIDE.md  LOGGING_GUIDE.md  LOG_SANITIZATION.md  MIGRATIONS_GUIDE.md  MIGRATIONS_QUICK_REF.md  PERMISSIONS_GUIDE.md  PERMISSION_OVERRIDES_IMPLEMENTATION.md  PERMISSION_OVERRIDES_QUICK_REF.md  PERMISSION_OVERRIDES_SUMMARY.md  PERMISSION_OVERRIDE_IMPLEMENTATION_SUMMARY.md  PERMISSION_OVERRIDE_REQUEST_SYSTEM.md  RATE_LIMITING_GUIDE.md  README.md  RERANKER_GUIDE.md  RERANKER_IMPLEMENTATION.md  RETRIEVAL_GUIDE.md  SEEDERS_GUIDE.md  (+20 more)
backend/examples/: csv_xlsx_filtering_example.py  dev_vector_store_test.py  exception_examples.py  file_upload_examples.py  json_filtering_example.py  logging_examples.py  programmatic_ingestion.py  simple_ingestion.py
backend/logs/: .gitignore
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 001_create_application_settings.py  002_create_user_management.py  003_refactor_user_table.py  004_create_user_profiles_table.py  005_create_user_invitations_and_auth_tables.py  006_create_file_uploads_table.py  007_create_departments_table.py  008_update_security_level_to_numbered.py  009_create_user_permissions_table.py  010_create_permission_overrides_table.py  011_create_jobs_table.py  (+12 more)
backend/tests/: QUICK_REFERENCE.md  README.md  conftest.py  test_cache_history_encryption_new.py  test_conversation_flow.py  test_encryption_settings.py  test_exceptions.py  test_intent_classifier.py  test_message_encryption.py  test_prompt_configuration.py  test_retriever_pre_filtering.py  test_retriever_security_filtering.py  test_settings.py
(+152 files in other folders)
