[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-fortress"
version = "1.0.0"
description = "A flexible, secure, vendor-agnostic knowledge platform with support for multiple LLMs, vector stores, and custom security layers."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nurudeen Habibu", email = "nurudeenh@gmail.com"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "knowledge-base",
    "document-management",
    "document-ingestion",
    "local-llm",
    "llama.cpp",
    "llm",
    "vector-store",
    "qdrant",
    "pinecone",
    "chroma",
    "embeddings",
    "rbac",
    "multi-tenant",
    "fastapi",
    "open-source",
    "chat-interface",
    "admin-dashboard"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Site Management"
]

dependencies = [
    # FastAPI Core
    "fastapi==0.121.0",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.11.0",
    "slowapi==0.1.9",
    
    # HTTP Client & Async Operations
    "httpx==0.28.1",
    "aiofiles==23.2.1",
    "aiohttp==3.9.1",
    
    # Job Scheduling & Background Tasks
    "apscheduler==3.10.4",
    
    # Database (SQL)
    "sqlalchemy==2.0.44",
    "alembic==1.13.1",
    "click==8.1.0",
    
    # Database Drivers - PostgreSQL
    "psycopg2-binary==2.9.11",
    "asyncpg==0.30.0",
    
    # Database Drivers - MySQL
    "pymysql==1.1.0",
    "aiomysql==0.2.0",
    "cryptography==41.0.7",
    
    # Database Drivers - SQLite
    "aiosqlite==0.20.0",
    
    # LangChain Core
    "langchain==1.0.4",
    "langchain-core==1.0.3",
    "langchain-community==0.4.1",
    
    # LangChain - LLM Providers
    "langchain-openai==1.0.2",
    "langchain-google-genai==3.0.1",
    "langchain-huggingface==1.0.1",
    "llama-cpp-python==0.2.90",
    
    # LangChain - Embedding Providers
    "sentence-transformers==5.1.2",
    "langchain-cohere==0.2.0",
    "cohere==5.5.8",
    
    # LangChain - Vector Databases
    "langchain-chroma==1.0.0",
    "langchain-qdrant==1.1.0",
    "qdrant-client==1.10.0",
    "langchain-pinecone==0.0.1",
    "pinecone-client==5.0.1",
    "langchain-weaviate==0.0.6",
    "weaviate-client==4.17.0",
    "langchain-milvus==0.2.2",
    "pymilvus==2.4.3",
    
    # Document Processing & Text Splitting
    "pypdf2==3.0.1",
    "unstructured==0.18.18",
    "tiktoken==0.12.0",
    "python-docx==0.8.11",
    "openpyxl==3.1.2",
    "python-pptx==0.6.23",
    "python-multipart==0.0.6",
    "docx2html==0.2.3",
    
    # Security & Authentication
    "python-jose[cryptography]==3.3.0",
    "argon2-cffi==23.2.0",
    
    # Email
    "fastapi-mail==1.5.8",
    
    # Caching
    "redis==5.0.0",
    
    # Logging & Monitoring
    "python-json-logger==2.0.7",
    "colorlog==6.8.2",
    
    # Environment & Configuration
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "black==24.1.1",
    "ruff==0.3.5",
    "mypy==1.8.0",
    "ipython==8.21.0",
]

[project.urls]
Homepage = "https://github.com/nurudeen19/rag-fortress"
Repository = "https://github.com/nurudeen19/rag-fortress.git"
Documentation = "https://github.com/nurudeen19/rag-fortress/blob/main/README.md"
Issues = "https://github.com/nurudeen19/rag-fortress/issues"
Discussions = "https://github.com/nurudeen19/rag-fortress/discussions"
LinkedIn = "https://www.linkedin.com/in/nurudeen-habibu/"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
    "if False:",
]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "migrations",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_variables = true
